Assert when trying to section the Data Property area from top to bottom. #55298

Closed
opened 2018-06-02 17:15:48 +02:00 by Germano Cavalcante · 8 comments

Short description of error
This is the assert:

13: BLI_system_backtrace - 0x7F2A5BE0
12: GPU_viewport_draw_to_screen - 0x7E865840
11: wm_draw_region_blit - 0x7DDE3060
10: wm_draw_window_onscreen - 0x7DDE3510
9: wm_draw_window - 0x7DDE38E0
8: wm_draw_update - 0x7DDE1DA0
7: WM_main - 0x7DD9DC60
6: main - 0x7DD965B0
5: invoke_main - 0x816FC870
4: __scrt_common_main_seh - 0x816FC630
3: __scrt_common_main - 0x816FC610
2: mainCRTStartup - 0x816FC930
1: BaseThreadInitThunk - 0x32233020
0: RtlUserThreadStart - 0x33571530
/src/blender/source/blender/gpu/intern/gpu_viewport.c:524, GPU_viewport_draw_to_screen(), at 'h == BLI_rcti_size_y(rect) + 1'

Exact steps for others to reproduce the error
With the mouse cursor in the upper left corner of the Data Property area try to section this area (without using the preview).
The assert message will be displayed indicating that the size of the 3dview area is different from the size of the viewport.

**Short description of error** This is the assert: ``` 13: BLI_system_backtrace - 0x7F2A5BE0 12: GPU_viewport_draw_to_screen - 0x7E865840 11: wm_draw_region_blit - 0x7DDE3060 10: wm_draw_window_onscreen - 0x7DDE3510 9: wm_draw_window - 0x7DDE38E0 8: wm_draw_update - 0x7DDE1DA0 7: WM_main - 0x7DD9DC60 6: main - 0x7DD965B0 5: invoke_main - 0x816FC870 4: __scrt_common_main_seh - 0x816FC630 3: __scrt_common_main - 0x816FC610 2: mainCRTStartup - 0x816FC930 1: BaseThreadInitThunk - 0x32233020 0: RtlUserThreadStart - 0x33571530 /src/blender/source/blender/gpu/intern/gpu_viewport.c:524, GPU_viewport_draw_to_screen(), at 'h == BLI_rcti_size_y(rect) + 1' ``` **Exact steps for others to reproduce the error** With the mouse cursor in the upper left corner of the `Data Property` area try to section this area (without using the preview). The assert message will be displayed indicating that the size of the 3dview area is different from the size of the viewport.
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

#55664 was marked as duplicate of this issue

#55664 was marked as duplicate of this issue
Author
Member

Added subscriber: @brecht

Added subscriber: @brecht
Author
Member

@brecht, you worked in this area, maybe you have a better idea that is happening.

@brecht, you worked in this area, maybe you have a better idea that is happening.
Brecht Van Lommel was assigned by Germano Cavalcante 2018-06-02 17:36:56 +02:00
Author
Member

Proposed solution: D3460

Proposed solution: [D3460](https://archive.blender.org/developer/D3460)
Brecht Van Lommel was unassigned by Germano Cavalcante 2018-06-05 03:52:54 +02:00
Julian Eisel was assigned by Germano Cavalcante 2018-06-05 03:52:54 +02:00

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by ca8f787349

This issue was referenced by ca8f787349dcdf5f58f5fb950f14c1247d1bbcbf
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55298
No description provided.