Fix T55298: Failing assert when splitting areas vertically

There are more related glitches for which I have fixes. Will test them some more
and push in a followup commit.